--- a/config/database.yml
+++ b/config/database.yml
@@ -5,9 +5,9 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: mysql2
   username: root
-  password:
+  password: root
   database: events_development
   pool: 5
   timeout: 5000
