--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 /db/*.sqlite3
 /db/*.sqlite3-journal
 
-/config/database.yml
+
 
 # Ignore all logfiles and tempfiles.
 /log/*
@@ -22,3 +22,6 @@
 
 # Ignore Byebug command history file.
 .byebug_history
+
+/config/database.yml
+/db/schema.rb
