--- a/config/database.yml
+++ b/config/database.yml
@@ -5,10 +5,11 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: mysql2
-  username: root
-  password: root
-  database: events_development
+  adapter: postgresql
+  username: kitchenapp
+  password: playoffs
+  database: events_dev
+  host: localhost
   pool: 5
   timeout: 5000
 
@@ -20,7 +21,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: events_testing
+  database: events_test
 
 production:
   <<: *default
