--- a/config/database.yml
+++ b/config/database.yml
@@ -8,7 +8,7 @@ default: &default
   adapter: postgresql
   username: kitchenapp
   password: playoffs
-  database: events_dev
+  database: eventify_dev
   host: localhost
   pool: 5
   timeout: 5000
@@ -21,7 +21,8 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: events_test
+  database: eventify_test
+
 
 production:
   <<: *default
